<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:id="@+id/linearViewHorizontal"
        android:title="@string/LinearViewHorizontal"
        app:showAsAction="never"/>

    <item android:id="@+id/linearViewVertical"
        android:title="@string/LinearViewVertical"
        app:showAsAction="never"/>

    <item android:id="@+id/gridView"
        android:title="@string/GridView"
        app:showAsAction="never"/>

    <item android:id="@+id/staggeredViewHorizontal"
        android:title="@string/StaggeredViewHorizontal"
        app:showAsAction="never"/>

    <item android:id="@+id/staggeredViewVertical"
        android:title="@string/StaggeredViewVertical"
        app:showAsAction="never"/>

</menu>